--- a/form/index.html
+++ b/form/index.html
@@ -42,7 +42,7 @@
   <main>
     <h1>Form</h1>
     <div>
-      <img src="../images/shark-fin.svg" alt="shark fin">
+      <img class= "shark-svg" src="../images/shark-fin.svg" alt="shark fin">
     </div>
   </main>
 </body>
