--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <source srcset="images/hero-1600.jpg" media="(min-width: 901px)">
       <source srcset="images/hero-900.jpg" media="(min-width: 601px)">
       <source srcset="images/hero-600.jpg" media="(max-width: 600px)">
-  
+
       <img src="images/hero-900.jpg" alt="dhark fins">
     </picture>
     <div class="overlay">
@@ -58,135 +58,143 @@
   </div>
 
   <main>
-    <div class="scroll-down">About Us</div>
-    <article class="first-article" class="panel">
-      <h2>What are dharks?</h2>
-      <p>
-        Dog Sharks (<em>selachimorpha canis</em>), often called dharks, are a group of
-        <a href="https://www.sciencedirect.com/topics/immunology-and-microbiology/elasmobranch">elasmobranch</a> fish
-        characterized by a cartilaginous skeleton, three gill slits on the sides of the head, and wimpy front legs that
-        appear to serve no use. Due to their
-        incredible mobility, dharks thrive in costal beaches and are found at depths of 5 metres. Since their discovery,
-        they have been found all accross the pacific ocean and are commonly seen by tourists. These unique creatures are
-        apex predators – organisms at the top of their underwater food chain.
-      </p>
-      <a href="about/" class="button">What We Do</a>
-      <img class="inline-picture" src="images/dhark600.jpg" alt="depiction of a dhark">
-    </article>
-    <article class="panel">
-      <h2>Evolutionary history</h2>
-      <h3>Origin</h3>
-      <p>
-        It is estimated that dharks first appeared in the late 1980's after decades of evolution. The earliest evidences
-        of which were found in 2015 by American biologists Dave Limbean and Mike Stephens, Ph.D., while on an
-        investigatory trip to the Pacific island of Aitutaki. Their research indicates that the dhark originated from a
-        shipwrecked pack of dogs lost at sea during the second world war. Based on probable scientific theory,
-        hypothesized after extensive research by these scientists, it is believed that the dogs were unable to aquire
-        food on the island and began to hunt in the shallow reefs. Over the next few years the dogs rapidly evolved to
-        have gills and a rear fin on their tail.
-      </p>
-      <p>
-        From this common ancestor, three species of sharks emerged:
-      </p>
-      <dl>
-        <dt>
-          Dhark (<em>selachimorpha canis</em>)
-        </dt>
-        <dd>
-          The most common of the three, and the most docile
-        </dd>
-        <dt>
-          Laser Shark (<em>selachimorpha laseri</em>)
-        </dt>
-        <dd>
-          It's a shark with laser beams
-        </dd>
-        <dt>
-          Flying Shark (<em>selachimorpha tornadis</em>)
-        </dt>
-        <dd>
-          The flying shark shown in the documentary <strong>Sharknado</strong>
-        </dd>
-      </dl>
-      <h3>Anatomy</h3>
-      <p>
-        The dark has five unique characterists:
-      </p>
-      <ol>
-        <li>
-          Instead of a back fin like most sharks, the <em>selachimorpha canis</em> has a fin on its tail. This
-          evolutionary advantage allows the dhark to travel at speeds of 80 miles an hour!
-        </li>
-        <li>
-          They have wimpy front legs. It appears that the rear legs stayed large while the front legs shrunk during
-          evolution.
-        </li>
-        <li>
-          Their ears:
-          <ul>
-            <li>
-              Dhark ears protrude from the head, unlike most sharks.
-            </li>
-            <li>
-              The ears also still have fur, which is different from the rest of the body.
-            </li>
-          </ul>
-        </li>
-        <li>
-          They think in dog. Recent evidence shows that dharks still think in barks and woofs. They also love to play
-          fetch.
-        </li>
-        <li>
-          Dharks are much less likely to rip you limb from limb than other breeds of sharks.
-        </li>
-      </ol>
-      <a href="form/" class="button">Sign Up For Spam</a>
-    </article>
-    <article>
-      <h2>Our Projects</h2>
-      <div class="cards">
-        <div class="card">
-          <a href="">
-            <div class="image-wrapper">
-              <img src="images/conservation400.jpg" alt="dhark conservation">
-            </div>
-            <div class="overlay">
-              <p>conservation</p>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="">
-            <div class="image-wrapper">
-              <img src="images/education400.jpg" alt="educating people about dharks">
-            </div>
-            <div class="overlay">
-              <p>education</p>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="">
-            <div class="image-wrapper">
-              <img src="images/dhark-shirt400.jpg" alt="t-shirt">
-            </div>
-            <div class="overlay">
-              <p>t-shirts</p>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="">
-            <div class="image-wrapper">
-              <img src="images/shrek400.png" alt="shrek">
-            </div>
-            <div class="overlay">
-              <p>onions</p>
-            </div>
-          </a>
-        </div>
+    <article class="first-article panel">
+      <div class="text-wrap">
+        <h2>What are dharks?</h2>
+        <p>
+          Dog Sharks (<em>selachimorpha canis</em>), often called dharks, are a group of
+          <a href="https://www.sciencedirect.com/topics/immunology-and-microbiology/elasmobranch">elasmobranch</a> fish
+          characterized by a cartilaginous skeleton, three gill slits on the sides of the head, and wimpy front legs
+          that
+          appear to serve no use. Due to their
+          incredible mobility, dharks thrive in costal beaches and are found at depths of 5 metres. Since their
+          discovery,
+          they have been found all accross the pacific ocean and are commonly seen by tourists. These unique creatures
+          are
+          apex predators – organisms at the top of their underwater food chain.
+        </p>
+        <a href="about/" class="button">What We Do</a>
+      </div>
+      <div class="image-wrap">
+        <img class="inline-picture" src="images/dhark600.jpg" alt="depiction of a dhark">
       </div>
     </article>
+    <article class="panel">
+      <div class="text-wrap">
+        <h2>Evolutionary history</h2>
+        <h3>Origin</h3>
+        <p>
+          It is estimated that dharks first appeared in the late 1980's after decades of evolution. The earliest
+          evidences
+          of which were found in 2015 by American biologists Dave Limbean and Mike Stephens, Ph.D., while on an
+          investigatory trip to the Pacific island of Aitutaki. Their research indicates that the dhark originated from
+          a
+          shipwrecked pack of dogs lost at sea during the second world war. Based on probable scientific theory,
+          hypothesized after extensive research by these scientists, it is believed that the dogs were unable to aquire
+          food on the island and began to hunt in the shallow reefs. Over the next few years the dogs rapidly evolved to
+          have gills and a rear fin on their tail.
+        </p>
+        <p>
+          From this common ancestor, three species of sharks emerged:
+        </p>
+        <dl>
+          <dt>
+            Dhark (<em>selachimorpha canis</em>)
+          </dt>
+          <dd>
+            The most common of the three, and the most docile
+          </dd>
+          <dt>
+            Laser Shark (<em>selachimorpha laseri</em>)
+          </dt>
+          <dd>
+            It's a shark with laser beams
+          </dd>
+          <dt>
+            Flying Shark (<em>selachimorpha tornadis</em>)
+          </dt>
+          <dd>
+            The flying shark shown in the documentary <strong>Sharknado</strong>
+          </dd>
+        </dl>
+        <h3>Anatomy</h3>
+        <p>
+          The dark has five unique characterists:
+        </p>
+        <ol>
+          <li>
+            Instead of a back fin like most sharks, the <em>selachimorpha canis</em> has a fin on its tail. This
+            evolutionary advantage allows the dhark to travel at speeds of 80 miles an hour!
+          </li>
+          <li>
+            They have wimpy front legs. It appears that the rear legs stayed large while the front legs shrunk during
+            evolution.
+          </li>
+          <li>
+            Their ears:
+            <ul>
+              <li>
+                Dhark ears protrude from the head, unlike most sharks.
+              </li>
+              <li>
+                The ears also still have fur, which is different from the rest of the body.
+              </li>
+            </ul>
+          </li>
+          <li>
+            They think in dog. Recent evidence shows that dharks still think in barks and woofs. They also love to play
+            fetch.
+          </li>
+          <li>
+            Dharks are much less likely to rip you limb from limb than other breeds of sharks.
+          </li>
+        </ol>
+        <a href="form/" class="button">Sign Up For Spam</a>
+      </div>
+    </article>
+    <h2>Our Projects</h2>
+    <div class="cards">
+      <div class="card">
+        <a href="">
+          <div class="image-wrapper">
+            <img src="images/conservation400.jpg" alt="dhark conservation">
+          </div>
+          <div class="overlay">
+            <p>conservation</p>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="">
+          <div class="image-wrapper">
+            <img src="images/education400.jpg" alt="educating people about dharks">
+          </div>
+          <div class="overlay">
+            <p>education</p>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="">
+          <div class="image-wrapper">
+            <img src="images/dhark-shirt400.jpg" alt="t-shirt">
+          </div>
+          <div class="overlay">
+            <p>t-shirts</p>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="">
+          <div class="image-wrapper">
+            <img src="images/shrek400.png" alt="shrek">
+          </div>
+          <div class="overlay">
+            <p>onions</p>
+          </div>
+        </a>
+      </div>
+    </div>
   </main>
 
   <aside>
