--- a/index.html
+++ b/index.html
@@ -152,47 +152,49 @@
         <a href="form/" class="button">Sign Up For Spam</a>
       </div>
     </article>
-    <h2>Our Projects</h2>
-    <div class="cards">
-      <div class="card">
-        <a href="">
-          <div class="image-wrapper">
-            <img src="images/conservation400.jpg" alt="dhark conservation">
-          </div>
-          <div class="overlay">
-            <p>conservation</p>
-          </div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="">
-          <div class="image-wrapper">
-            <img src="images/education400.jpg" alt="educating people about dharks">
-          </div>
-          <div class="overlay">
-            <p>education</p>
-          </div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="">
-          <div class="image-wrapper">
-            <img src="images/dhark-shirt400.jpg" alt="t-shirt">
-          </div>
-          <div class="overlay">
-            <p>t-shirts</p>
-          </div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="">
-          <div class="image-wrapper">
-            <img src="images/shrek400.png" alt="shrek">
-          </div>
-          <div class="overlay">
-            <p>onions</p>
-          </div>
-        </a>
+    <div class="card-wrap">
+      <h2>Our Projects</h2>
+      <div class="cards">
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/conservation400.jpg" alt="dhark conservation">
+            </div>
+            <div class="overlay">
+              <p>conservation</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/education400.jpg" alt="educating people about dharks">
+            </div>
+            <div class="overlay">
+              <p>education</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/dhark-shirt400.jpg" alt="t-shirt">
+            </div>
+            <div class="overlay">
+              <p>t-shirts</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/shrek400.png" alt="shrek">
+            </div>
+            <div class="overlay">
+              <p>onions</p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </main>
