added fossil img

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
         </ol>
         <a href="form/" class="button">Sign Up For Spam</a>
       </div>
+      <div class="image-wrap">
+        <img class="inline-picture" src="images/dhark-fossil.jpg" alt="ancient dhark fossil">
+      </div>
     </article>
     <div class="card-wrap">
       <h2>Our Projects</h2>
