--- a/form/index.html
+++ b/form/index.html
@@ -40,10 +40,12 @@
     </nav>
   </header>
   <main>
-    <h1>Form</h1>
-    <div>
-      <img class= "shark-svg" src="../images/shark-fin.svg" alt="shark fin">
-    </div>
+    <article>
+      <h1>Form</h1>
+      <div>
+        <img class="shark-svg" src="../images/shark-fin.svg" alt="shark fin">
+      </div>
+    </article>
   </main>
 </body>
 
