--- a/about/index.html
+++ b/about/index.html
@@ -40,12 +40,15 @@
     </nav>
   </header>
   <main>
-    <h1>About</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
-      laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo perspiciatis
-      officiis.
-    </p>
+    <article>
+      <h1>About</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
+        laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo
+        perspiciatis
+        officiis.
+      </p>
+    </article>
   </main>
 </body>
 
