fixed about and form

--- a/about/index.html
+++ b/about/index.html
@@ -40,14 +40,30 @@
     </nav>
   </header>
   <main>
-    <article>
-      <h1>About</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
-        laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo
-        perspiciatis
-        officiis.
-      </p>
+    <article class="panel">
+      <div class="text-wrap about">
+        <h1>About</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
+          laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo
+          perspiciatis
+          officiis.
+        </p>
+        <p>
+          Dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
+          laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo
+          perspiciatis
+          officiis.
+        </p>
+      </div>
+      <div class="text-wrap contact">
+        <h2>Contact</h2>
+        <p>
+          Dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
+          laboriosam.
+        </p>
+        <a href="/about#" class="button">Fax Us</a>
+      </div>
     </article>
   </main>
 </body>
