--- a/form/index.html
+++ b/form/index.html
@@ -40,10 +40,24 @@
     </nav>
   </header>
   <main>
-    <article>
-      <h1>Form</h1>
-      <div>
-        <img class="shark-svg" src="../images/shark-fin.svg" alt="shark fin">
+    <article class="panel form">
+      <div class="text-wrap">
+        <h1>Form</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
+          laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo
+          perspiciatis
+          officiis.
+        </p>
+        <p>
+          Dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
+          laboriosam, ipsa nesciunt perferendis quasi! Eveniet delectus odio vel laudantium ex ipsam explicabo
+          perspiciatis
+          officiis.
+        </p>
+      </div>
+      <div class="image-wrap">
+        <img src="../images/shark-fin.svg" alt="shark fin">
       </div>
     </article>
   </main>
