--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <main>
     <article class="first-article panel">
       <div class="text-wrap">
-        <h2>What are dharks?</h2>
+        <h2>What are Dharks?</h2>
         <p>
           Dog Sharks (<em>selachimorpha canis</em>), often called dharks, are a group of
           <a href="https://www.sciencedirect.com/topics/immunology-and-microbiology/elasmobranch">elasmobranch</a> fish
@@ -81,7 +81,7 @@
     </article>
     <article class="panel">
       <div class="text-wrap">
-        <h2>Evolutionary history</h2>
+        <h2>Evolutionary History</h2>
         <h3>Origin</h3>
         <p>
           It is estimated that dharks first appeared in the late 1980's after decades of evolution. The earliest
