--- a/form/index.html
+++ b/form/index.html
@@ -56,7 +56,7 @@
           officiis.
         </p>
       </div>
-      <div class="image-wrap">
+      <div class="image-wrap shark-svg">
         <img src="../images/shark-fin.svg" alt="shark fin">
       </div>
     </article>
