--- a/index.html
+++ b/index.html
@@ -75,10 +75,25 @@
         </p>
         <a href="about/" class="button">What We Do</a>
       </div>
-      <div class="image-wrap">
+      <div class="image-wrap left">
         <img class="inline-picture" src="images/dhark600.jpg" alt="depiction of a dhark">
       </div>
     </article>
+    <aside>
+      <article class="panel">
+        <div class="image-wrap">
+          <img src="images/laser-shark600.jpg" alt="shark with frickin laser beams">
+        </div>
+        <div class="text-wrap left">
+          <h2>Laser Shark</h2>
+          <p>
+            The laser shark (<em>selachimorpha laseri</em>) is a close relative to the dhark, likely splitting
+            evolutionarily
+            in the 1960's.
+          </p>
+        </div>
+      </article>
+    </aside>
     <article class="panel">
       <div class="text-wrap">
         <h2>Evolutionary History</h2>
@@ -151,7 +166,7 @@
         </ol>
         <a href="form/" class="button">Sign Up For Spam</a>
       </div>
-      <div class="image-wrap">
+      <div class="image-wrap left">
         <img class="inline-picture" src="images/dhark-fossil.jpg" alt="ancient dhark fossil">
       </div>
     </article>
@@ -201,15 +216,6 @@
       </div>
     </div>
   </main>
-
-  <aside>
-    <h2>Laser Shark</h2>
-    <img src="images/laser-shark600.jpg" alt="shark with frickin laser beams">
-    <p>
-      The laser shark (<em>selachimorpha laseri</em>) is a close relative to the dhark, likely splitting evolutionarily
-      in the 1960's.
-    </p>
-  </aside>
 
   <footer>
     <p>
