--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
           Dolor sit amet consectetur adipisicing elit. Rerum aliquam voluptatem velit? Error ullam dolores
           laboriosam.
         </p>
-        <a href="/about#" class="button">Fax Us</a>
+        <a href="/about" class="button">Fax Us</a>
       </div>
     </article>
   </main>
