--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             The flying shark shown in the documentary <strong>Sharknado</strong>
           </dd>
         </dl>
-        <h3>Anatomy</h3>
+        <!-- <h3>Anatomy</h3>
         <p>
           The dark has five unique characterists:
         </p>
@@ -163,7 +163,7 @@
           <li>
             Dharks are much less likely to rip you limb from limb than other breeds of sharks.
           </li>
-        </ol>
+        </ol> -->
         <a href="form/" class="button">Sign Up For Spam</a>
       </div>
       <div class="image-wrap left">
